--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@ font-size: 30px;
 </head>
 
 <ul>
-<li><a href="uomini più ricchi.html">Introduzione</a></li>
+<li><a href="Index.html">Introduzione</a></li>
 <li><a href="geografia.html">Geografia</a></li>
 <li><a href="Economia.html">Economia</a></li>
 <li><a href="Storia.html">Storia</a></li>
