--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 body {
 background-color: lightslategrey;
 }
-
 h1 {
 color: black;
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 50px;
 }
-
 p {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 30px;
@@ -21,7 +19,6 @@ ol {
 background: #80abe4;
 padding: 20px;
 }
-
 ol li {
 background: #9495d1;
 color: rgb(92, 98, 187);
@@ -32,23 +29,18 @@ p2 {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 30px;
 } 
-
 </style>
+    
+<title>Roma</title>
 </head>
-
+<body>
 <ul>
 <li><a href="index.html">Introduzione</a></li>
 <li><a href="geografia.html">Geografia</a></li>
 <li><a href="Economia.html">Economia</a></li>
 <li><a href="Storia.html">Storia</a></li>
-
 </ul>
-
-<title>Roma</title>
-
-
 <h1>Roma</h1>
-
 <p>Roma, capitale d'Italia, è considerata una delle più belle città del mondo. Il suo centro storico, insieme alle proprietà extraterritoriali della Santa Sede dentro la città e alla Basilica di San Paolo Fuori le Mura, è tra i 58 siti italiani inseriti dall'Unesco nella World Heritage List.
 <img src="roma_in_breve.jpg" width="770" height="480"> <br>
 <p2>Roma, comune più popoloso ed esteso d’Italia, si posiziona tra le maggiori capitali europee per grandezza del territorio.È la città con la più alta concentrazione di beni storici e architettonici al mondo; il suo centro storico delimitato dal perimetro delle mura aureliane, sovrapposizione di testimonianze di quasi tre millenni, è espressione del patrimonio storico, artistico e culturale del mondo occidentale europeo e, nel 1980, insieme alle proprietà extraterritoriali della Santa Sede nella città e la basilica di San Paolo fuori le mura, è stato inserito nella lista dei Patrimoni dell’umanità dell’UNESCO.
@@ -56,6 +48,5 @@ font-size: 30px;
     Secondo la tradizione, Roma fu costruita sopra sette colli, la cui identificazione si perde nella storia delle origini della città, lasciando ancora dubbi tra gli storici. Il nucleo centrale e antico della città è costituito dagli storici sette colli: Palatino, Aventino, Campidoglio, Quirinale, Viminale, Esquilino e Celio.
 </p2><br>
 <img src="Colosseo_0_0.jpg" width="794" height="342">
-
-</Body>
+</body>
 </html>
